Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/generics/inference/4972073/T4972073b.out
T4972073b.java:18:68: compiler.err.repeated.interface
1 error
